v4.1.0
- Add black.box
- Fix issue with verb setting being ignored in some UserDefined ovpns

v4.0.9
- Fix XML

v4.0.8
- Add VanishedVPN and PrivateVPN

v4.0.7
- Allow import function to see root on Linux

v4.0.6
- Fix upgrade/non-display of locations bug

v4.0.5
- Fix initial platform checking broken in 4.0.4

v4.0.4
- Tracing and platform detection changes

v4.0.3
- Download percentage bar fix
- Try and avoid empty connection lists

v4.0.2
- Upgrade fix to stop connections needing to be revalidated following an update
- Fail over to next connection on first failure

v4.0.1
- Minor fixes and improvements in downloading from Github

v4.0.0
- Remove VPN files from addon (improving install speed massively)
- Allow VPN files to be updated and downloaded independently

v3.1.1
- ovpn generation bug fix

v3.1.0
- Close VPN connection on Kodi exit
- Modify internal Python API
- Tedious NordVPN updates

v3.0.0
- Introduce an internal Python API for third party use of filtering, etc

v2.8.0
- Added window ID filtering as an alternative to add-on filtering

v2.7.1
- Allow templates and ovpn files to be used in userdata directory

v2.7.0
- Protection for poorly set system clocks
- Add API support for pause, restart and cycle
- Delay start option

v2.6.2
- Update Perfect Privacy servers

v2.6.1
- Support for VPNSecure, adding key passwords
- Support for VPNArea

v2.6.0
- Switch connection views
- Added Linux only openvpn with no path option
- Added support for VPN.ac

v2.5.0
- Keymap function
- Auto select IP service
- Use openvpn ping and ping-exit to kill connection if it goes bad
- Improved wizard function, particularly for User Defined
- Improved file change restart function when network connection goes bad
- New cert for hideme (it might work now)
- NordVPN update (yet again.....)
- VPN Unlimited servers added

v2.4.3
- Another ExpressVPN update to really fix the problem
- ibVPN and Torguard fixes for OpenVPN 2.4.0

v2.4.2
- ExpressVPN update