@@ -1,6 +1,7 @@
 v4.1.0
 - Add black.box
 - Fix issue with verb setting being ignored in some UserDefined ovpns
+- Improve detection of IP address by adding ipinfo.io
 
 v4.0.9
 - Fix XML
